[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/player/dummyplayer.gd" type="Script" id=1]
[ext_resource path="res://textures/player.png" type="Texture" id=2]
[ext_resource path="res://textures/player-move1.png" type="Texture" id=3]
[ext_resource path="res://textures/player-move2.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 500.0

[sub_resource type="CircleShape2D" id=2]
radius = 1750.0

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 2

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 2

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 70, 40 )

[node name="player" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]
visible = false

[node name="AreaShape" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 1 )

[node name="SightArea" type="Area2D" parent="."]
visible = false

[node name="AreaShape" type="CollisionShape2D" parent="SightArea"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 3 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 104 )
shape = SubResource( 6 )
[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_enter"]
[connection signal="body_exited" from="InteractionArea" to="." method="on_interaction_area_exit"]
[connection signal="body_entered" from="SightArea" to="." method="on_sight_area_enter"]
[connection signal="body_exited" from="SightArea" to="." method="on_sight_area_exit"]
